14100
Given a Java class defined like this:
```scala
#!java
package com.example;

public abstract class Test{
       protected static class Inner{}
       protected abstract Inner getInner();
}
```
It is not possible to implement this class in Scala from another package:
```scala
Welcome to Scala version 2.7.3.final (OpenJDK Server VM, Java 1.6.0_0).
scala> import com.example.Test
import com.example.Test

scala> class Implementor extends Test{
    | import Test.Inner
    | def getInner:Inner = null
    | }
<console>:7: error: class Inner cannot be accessed in object com.example.Test
      def getInner:Inner = null
                   ^
```
This aside, Inner is not in scope as you would expect it to be:
```scala
scala> class Implementor extends Test{
    | def getInner:Inner = null
    | }
<console>:6: error: not found: type Inner
      def getInner:Inner = null
                   ^
```
